--- a/UnitTestFx/UnitTestFx.csproj
+++ b/UnitTestFx/UnitTestFx.csproj
@@ -62,6 +62,7 @@
       <Name>MT.Tools.Fx</Name>
     </ProjectReference>
   </ItemGroup>
+  <Import Project="..\Shared.ReflectionUtils.Core\Shared.ReflectionUtils.Core.projitems" Label="Shared" />
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
