--- a/MT.KitTools/MT.KitTools.csproj
+++ b/MT.KitTools/MT.KitTools.csproj
@@ -4,4 +4,8 @@
     <TargetFrameworks>net45;netstandard2.0;netcoreapp3.1;net5.0</TargetFrameworks>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Logger\" />
+  </ItemGroup>
+
 </Project>
